--- a/giannis.html
+++ b/giannis.html
@@ -8,10 +8,10 @@
          <body>
          <h1 align="center">Μέλη ομάδας</h1>
          <pa align="center">
-             <ul>
-                  <li><a href"xristos.html">Χρήστος</a></li>
-                  <li><a href"giannis.html">Γιάννης</a></li>
-                  <li><a href"tasos.html">Τάσος</a></li>
+             <ul >
+                  <li><a href="xristos.html">Χρήστος</a></li>
+                  <li><a href="giannis.html">Γιάννης</a></li>
+                  <li><a href="tasos.html">Τάσος</a></li>
              </ul>
          </p>
              <h2 align="center">Βιογραφικό</h2>
@@ -19,7 +19,7 @@
              Γιάννης Γρένδας ΑΜ:3861 <br>
               Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:C++,java,sql.<br>
               Ο Τόπος καταγωγής μου είναι απο Αλεξανδρούπολη <br>
-              <a href="https://www.alexpolis.gr"><img src="images/alexpoli(1).jpg" width="550"></a>
+              <a href="https://www.alexpolis.gr" target="_blank"><img src="images/alexpoli(1).jpg" width="550"></a>
 
          </p>
 
