--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
          <h1>Μέλη ομάδας</h1>
          <p>
              <ul>
-                  <li><a href"xristos.html">Χρήστος</a></li>
-                  <li><a href"giannis.html">Γιάννης</a></li>
-                  <li><a href"tasos.html">Τάσος</a></li>
+                  <li><a href="xristos.html">Χρήστος</a></li>
+                  <li><a href="giannis.html">Γιάννης</a></li>
+                  <li><a href="tasos.html">Τάσος</a></li>
              </ul>
          </p>
 
