add some info on giannis.html

--- a/giannis.html
+++ b/giannis.html
@@ -6,20 +6,20 @@
          </head>
 
          <body>
-         <h1>Μέλη ομάδας</h1>
-         <p>
+         <h1 align="center">Μέλη ομάδας</h1>
+         <pa align="center">
              <ul>
                   <li><a href"xristos.html">Χρήστος</a></li>
                   <li><a href"giannis.html">Γιάννης</a></li>
                   <li><a href"tasos.html">Τάσος</a></li>
              </ul>
          </p>
-             <h2>Βιογραφικό</h2>
-         <p>
+             <h2 align="center">Βιογραφικό</h2>
+         <p align="center">
              Γιάννης Γρένδας ΑΜ:3861 <br>
               Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:C++,java,sql.<br>
               Ο Τόπος καταγωγής μου είναι απο Αλεξανδρούπολη <br>
-              <a href="https://www.alexpolis.gr"><img src="images/alexpoli(1).jpg" width="500"></a>
+              <a href="https://www.alexpolis.gr"><img src="images/alexpoli(1).jpg" width="550"></a>
 
          </p>
 
