--- a/giannis.html
+++ b/giannis.html
@@ -2,12 +2,13 @@
 <html>
          <head>
                <meta charset="UTF-8">
-               <title> My-site </title>
+               <title> Γιάννης Γρένδας</title>
+               <link rel="stylesheet" type="text/css" href="/css/css_index.css">
          </head>
 
          <body>
          <h1 align="center">Μέλη ομάδας</h1>
-         <pa align="center">
+         <p align="center">
              <ul >
                   <li><a href="xristos.html">Χρήστος</a></li>
                   <li><a href="giannis.html">Γιάννης</a></li>
