--- a/project.html
+++ b/project.html
@@ -7,14 +7,17 @@
          </head>
 
          <body>
-         <h1>Μέλη ομάδας</h1>
-         <p>
-             <ul>
+           
+              <ul style="list-style-type:none;">
                   <li><a href="xristos.html">Χρήστος</a></li>
                   <li><a href="giannis.html">Γιάννης</a></li>
                   <li><a href="tasos.html">Τάσος</a></li>
-             </ul>
-         </p>
+
+              </ul>
+              <h2>Project</h2>
+              <p>
+
+              </p>
 
          </body>
 </html>
