--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,13 @@
          </head>
 
          <body>
+           <ul>
+             <li><a href="index.html">HOME</a></li>
+             <li><a href="project.html">Project</a></li>
+             <li><a href="bio.html">Βιογραφικό</a></li>
+             <li><a href="contact.html">Επικοινωνία</a></li>
+           </ul>
+
               <h2>Μέλη ομάδας</h2>
               <p>
                  <ul style="list-style-type:none;">
@@ -15,9 +22,7 @@
                      <li><a href="tasos.html">Τάσος</a></li>
 
                  </ul>
-                 <ul>
-                   <li><a href="contact.html">>Επικοινωνία</a></li>
-                 </ul>
+
               </p>
 
          </body>
