--- a/giannis.html
+++ b/giannis.html
@@ -3,10 +3,17 @@
          <head>
                <meta charset="UTF-8">
                <title> Γιάννης Γρένδας</title>
-               <link rel="stylesheet" type="text/css" href="/css/css_index.css">
+               <link rel="stylesheet" type="text/css" href="css/css_index.css">
          </head>
 
          <body>
+           <ul>
+             <li><a href="index.html">HOME</a></li>
+             <li><a href="project.html">Project</a></li>
+             <li><a href="bio.html">Βιογραφικό</a></li>
+             <li><a href="contact.html">Επικοινωνία</a></li>
+           </ul>
+
          <h1 align="center">Μέλη ομάδας</h1>
          <p align="center">
              <ul >
