--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
          </head>
 
          <body>
-         <h1>Μέλη ομάδας</h1>
+           <ul>
+             <li><a href="index.html">HOME</a></li>
+             <li><a href="project.html">Project</a></li>
+             <li><a href="bio.html">Βιογραφικό</a></li>
+             <li><a href="contact.html">Επικοινωνία</a></li>
+           </ul>
+         <h2>Μέλη ομάδας</h2>
          <p>
-             <ul>
+             <ul >
                   <li><a href="xristos.html">Χρήστος</a></li>
                   <li><a href="giannis.html">Γιάννης</a></li>
                   <li><a href="tasos.html">Τάσος</a></li>
