--- a/project.html
+++ b/project.html
@@ -7,7 +7,13 @@
          </head>
 
          <body>
-           
+           <ul>
+             <li><a href="index.html">HOME</a></li>
+             <li><a href="project.html">Project</a></li>
+             <li><a href="bio.html">Βιογραφικό</a></li>
+             <li><a href="contact.html">Επικοινωνία</a></li>
+           </ul>
+
               <ul style="list-style-type:none;">
                   <li><a href="xristos.html">Χρήστος</a></li>
                   <li><a href="giannis.html">Γιάννης</a></li>
