--- a/xristos.html
+++ b/xristos.html
@@ -6,17 +6,22 @@
          </head>
 
          <body>
-         <h1>Μέλη ομάδας</h1>
-         <p>
-             <ul>
+           <ul>
+             <li><a href="index.html">HOME</a></li>
+             <li><a href="project.html">Project</a></li>
+             <li><a href="bio.html">Βιογραφικό</a></li>
+             <li><a href="contact.html">Επικοινωνία</a></li>
+           </ul>
+
+         <h1 align="center">Μέλη ομάδας</h1>
+         <p align="center">
+             <ul >
                   <li><a href="xristos.html">Χρήστος</a></li>
                   <li><a href="giannis.html">Γιάννης</a></li>
                   <li><a href="tasos.html">Τάσος</a></li>
              </ul>
          </p>
-
-       </p>
-           <h2 align="center">Βιογραφικό</h2>
+             <h2 align="center">Βιογραφικό</h2>
        <p align="center">
            Χρήστος Βενετόπουλος ΑΜ:4161 <br>
             Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:java,c++.<br>
