--- a/giannis.html
+++ b/giannis.html
@@ -24,7 +24,10 @@
          </p>
              <h2 align="center">Βιογραφικό</h2>
          <p align="center">
-             Γιάννης Γρένδας ΑΜ:3861 <br>
+             Γιάννης Γρένδας<br>
+             <br>
+             <img src="images/giannis.jpg" width="300"><br>
+              ΑΜ:3861 <br>
               Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:C++,java,sql.<br>
               Ο Τόπος καταγωγής μου είναι απο Αλεξανδρούπολη <br>
               <a href="https://www.alexpolis.gr" target="_blank"><img src="images/alexpoli(1).jpg" width="550"></a>
