--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
          <head>
                <meta charset="UTF-8">
-               <title> My-site </title>
+               <title> Επικοινωνία </title>
                <link rel="stylesheet" type="text/css" href="css/css_index.css">
          </head>
 
@@ -14,15 +14,18 @@
              <li><a href="contact.html">Επικοινωνία</a></li>
            </ul>
 
-              <h2>Μέλη ομάδας</h2>
+          <h3 align="center">Μέλη ομάδας</h3>
               <p>
-                 <ul style="list-style-type:none;">
-                     <li><a href="xristos.html">Χρήστος</a></li>
-                     <li><a href="giannis.html">Γιάννης</a></li>
-                     <li><a href="tasos.html">Τάσος</a></li>
-
-                 </ul>
-
+                  <ul>
+                       <li><a href="xristos.html">Χρήστος</a></li>
+                       <li><a href="giannis.html">Γιάννης</a></li>
+                       <li><a href="tasos.html">Αναστάσιος</a></li>
+                  </ul>
+              </p>
+              <h2 align="center">Επικοινωνία</h2>
+              <p align="center">
+                Γιαννης Γρένδας : iogrend@teiemt.gr <br>
+                Χρίστος Βενετόπουλος : chrvene@teiemt.gr<br>
               </p>
 
          </body>
