--- a/giannis.html
+++ b/giannis.html
@@ -14,25 +14,23 @@
              <li><a href="contact.html">Επικοινωνία</a></li>
            </ul>
 
-         <h1 align="center">Μέλη ομάδας</h1>
-         <p align="center">
-             <ul >
+         <h3 align="center">Μέλη ομάδας</h3>
+         <p>
+             <ul>
                   <li><a href="xristos.html">Χρήστος</a></li>
                   <li><a href="giannis.html">Γιάννης</a></li>
-                  <li><a href="tasos.html">Τάσος</a></li>
+                  <li><a href="tasos.html">Αναστάσιος</a></li>
              </ul>
          </p>
              <h2 align="center">Βιογραφικό</h2>
          <p align="center">
              Γιάννης Γρένδας<br>
              <br>
-             <img src="images/giannis.jpg" width="300"><br>
-
-
+             <img src="images/giannis.jpg" width="250"><br>
               ΑΜ:3861 <br>
               Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:C++,java,sql.<br>
               Ο Τόπος καταγωγής μου είναι απο Αλεξανδρούπολη <br>
-              <a href="https://www.alexpolis.gr" target="_blank"><img src="images/alexpoli(1).jpg" width="550"></a>
+              <a href="https://www.alexpolis.gr" target="_blank"><img src="images/alexpoli(2).jpeg" width="550"></a>
 
          </p>
 
