--- a/tasos.html
+++ b/tasos.html
@@ -2,7 +2,7 @@
 <html>
          <head>
                <meta charset="UTF-8">
-               <title> Home </title>
+               <title> Αναστάσιος Παυλίδης </title>
                <link rel="stylesheet" type="text/css" href="css/css_index.css">
          </head>
 
@@ -13,6 +13,7 @@
              <li><a href="bio.html">Βιογραφικό</a></li>
              <li><a href="contact.html">Επικοινωνία</a></li>
            </ul>
+
          <h3 align="center">Μέλη ομάδας</h3>
          <p>
              <ul>
@@ -21,6 +22,20 @@
                   <li><a href="tasos.html">Αναστάσιος</a></li>
              </ul>
          </p>
+             <h2 align="center">Βιογραφικό</h2>
+         <p align="center">
+             Αναστάσιος Παυλίδης<br>
+             <br>
+             <img src="images/tasos.jpg" width="250">
+             <br>
+              ΑΜ:3860 <br>
+              Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:C++,java,sql.<br>
+              Ο Τόπος καταγωγής μου είναι απο Χρυσούπολη <br>
+              <a href="" target="_blank"><img src="images/chrysoupoli.jpg" width="550" height="350"></a>
 
+         </p>
+
+
+         <footer align="center">Αναστάσιος Παυλίδης 2019</footer>
          </body>
 </html>
