--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
 <html>
          <head>
                <meta charset="UTF-8">
-               <title> My-site </title>
+               <title> Project </title>
                <link rel="stylesheet" type="text/css" href="css/css_index.css">
          </head>
 
@@ -13,15 +13,17 @@
              <li><a href="bio.html">Βιογραφικό</a></li>
              <li><a href="contact.html">Επικοινωνία</a></li>
            </ul>
-
-              <ul style="list-style-type:none;">
-                  <li><a href="xristos.html">Χρήστος</a></li>
-                  <li><a href="giannis.html">Γιάννης</a></li>
-                  <li><a href="tasos.html">Τάσος</a></li>
-
-              </ul>
-              <h2>Project</h2>
-              <p>
+           <h3 align="center">Μέλη ομάδας</h3>
+           <p>
+               <ul>
+                    <li><a href="xristos.html">Χρήστος</a></li>
+                    <li><a href="giannis.html">Γιάννης</a></li>
+                    <li><a href="tasos.html">Αναστάσιος</a></li>
+               </ul>
+           </p>
+              <h2 align="center">Project</h2>
+              <p align="center">
+                Θέλουμε να δημιουργήσουμε ένα project με στόχο την ηλεκτρονική εύρεση δωματίων ξενοδοχείου και σκοπό την εξοικονόμηση χρόνου
 
               </p>
 
