--- a/xristos.html
+++ b/xristos.html
@@ -2,7 +2,8 @@
 <html>
          <head>
                <meta charset="UTF-8">
-               <title> My-site </title>
+               <title> Χρήστος Βενετόπουλος </title>
+               <link rel="stylesheet" type="text/css" href="css/css_index.css">
          </head>
 
          <body>
@@ -13,25 +14,28 @@
              <li><a href="contact.html">Επικοινωνία</a></li>
            </ul>
 
-         <h1 align="center">Μέλη ομάδας</h1>
-         <p align="center">
-             <ul >
+         <h3 align="center">Μέλη ομάδας</h3>
+         <p>
+             <ul>
                   <li><a href="xristos.html">Χρήστος</a></li>
                   <li><a href="giannis.html">Γιάννης</a></li>
-                  <li><a href="tasos.html">Τάσος</a></li>
+                  <li><a href="tasos.html">Αναστάσιος</a></li>
              </ul>
          </p>
              <h2 align="center">Βιογραφικό</h2>
-       <p align="center">
-           Χρήστος Βενετόπουλος ΑΜ:4161 <br>
-            Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:java,c++.<br>
-            Ο Τόπος καταγωγής μου είναι απο Αλεξανδρούπολη <br>
-            <a href="https://www.alexpolis.gr" target="_blank"><img src="images/alexpoli(1).jpg" width="550"></a>
+        <p align="center">
+            Χρήστος Βενετόπουλος<br>
+            <br>
+            <img src="images/xristos.jpg" width="250"><br>
+             ΑΜ:4161 <br>
+             Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:java,c++.<br>
+             Ο Τόπος καταγωγής μου είναι απο Αλεξανδρούπολη <br>
+             <a href="https://www.alexpolis.gr" target="_blank"><img src="images/alexpoli(1).jpg" width="550"></a>
 
-       </p>
+         </p>
 
 
-       <footer>Χρήστος Βενετόπουλος 2019</footer>
+       <footer align="center">Χρήστος Βενετόπουλος 2019</footer>
 
          </body>
 </html>
