--- a/tasos.html
+++ b/tasos.html
@@ -29,9 +29,10 @@
              <img src="images/tasos.jpg" width="250">
              <br>
               ΑΜ:3860 <br>
-              Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:C++,java,sql.<br>
-              Ο Τόπος καταγωγής μου είναι απο Χρυσούπολη <br>
-              <a href="" target="_blank"><img src="images/chrysoupoli.jpg" width="550" height="350"></a>
+              Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:C++,PHP,Python,java,sql. <br>
+              Ο τόπος καταγωγής μου ειναι η Χρυσούπολη. <br>
+              Στον ελεύθερο μου χρόνο ασχολούμαι με το ποδόσφαιρο και τον μηχανοκίνητο αθλητισμό.<br>
+              <a href="https://www.chrysoupolinews.com" target="_blank"><img src="images/chrysoupoli.jpg" width="550" height="350"></a>
 
          </p>
 
