--- a/xristos.html
+++ b/xristos.html
@@ -29,6 +29,7 @@
             <img src="images/xristos.jpg" width="250"><br>
              ΑΜ:4161 <br>
              Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:java,c++.<br>
+             Στον ελεύθερο μου χρόνο ασχολούμαι με το ποδοσφαιρο και βίντεο γκειμς<br>
              Ο Τόπος καταγωγής μου είναι απο Αλεξανδρούπολη <br>
              <a href="https://www.alexpolis.gr" target="_blank"><img src="images/alexpoli(1).jpg" width="550"></a>
 
