--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,10 @@
               <h2 align="center">Επικοινωνία</h2>
               <p align="center">
                 Γιαννης Γρένδας : iogrend@teiemt.gr <br>
+
                 Χρίστος Βενετόπουλος : chrvene@teiemt.gr<br>
+
+                Αναστάσιος Παυλίδης : anpavlc@teiemt.gr<br>
               </p>
 
          </body>
