--- a/giannis.html
+++ b/giannis.html
@@ -29,6 +29,7 @@
              <img src="images/giannis.jpg" width="250"><br>
               ΑΜ:3861 <br>
               Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:C++,java,sql.<br>
+              Είμαι 20 ετών ασχολούμαι με τον αθλητισμό και στον ελεύθερό μου χρόνο ασχολούμαι με την φωτογραφία <br>
               Ο Τόπος καταγωγής μου είναι απο Αλεξανδρούπολη <br>
               <a href="https://www.alexpolis.gr" target="_blank"><img src="images/alexpoli(2).jpeg" width="550"></a>
 
