--- a/giannis.html
+++ b/giannis.html
@@ -12,6 +12,7 @@
              <li><a href="project.html">Project</a></li>
              <li><a href="bio.html">Βιογραφικό</a></li>
              <li><a href="contact.html">Επικοινωνία</a></li>
+             <li><a href="tutorialgit.html">Οδηγός</a></li>
            </ul>
 
          <h3 align="center">Μέλη ομάδας</h3>
@@ -26,11 +27,14 @@
          <p align="center">
              Γιάννης Γρένδας<br>
              <br>
-             <img src="images/giannis.jpg" width="250"><br>
+             <img src="images/giannis.jpg" width="250">
+             <br>
+             <br>
               ΑΜ:3861 <br>
               Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:C++,java,sql.<br>
               Είμαι 20 ετών ασχολούμαι με τον αθλητισμό και στον ελεύθερό μου χρόνο ασχολούμαι με την φωτογραφία <br>
               Ο Τόπος καταγωγής μου είναι απο Αλεξανδρούπολη <br>
+              <br>
               <a href="https://www.alexpolis.gr" target="_blank"><img src="images/alexpoli(2).jpeg" width="550"></a>
 
          </p>
