--- a/tasos.html
+++ b/tasos.html
@@ -12,6 +12,7 @@
              <li><a href="project.html">Project</a></li>
              <li><a href="bio.html">Βιογραφικό</a></li>
              <li><a href="contact.html">Επικοινωνία</a></li>
+             <li><a href="tutorialgit.html">Οδηγός</a></li>
            </ul>
 
          <h3 align="center">Μέλη ομάδας</h3>
@@ -24,14 +25,17 @@
          </p>
              <h2 align="center">Βιογραφικό</h2>
          <p align="center">
-                 Αναστάσιος Παυλίδης<br>
-             <br>
+                Αναστάσιος Παυλίδης
+              <br>
+              <br>
              <img src="images/tasos.jpg" width="250">
+             <br>
              <br>
               ΑΜ:3860 <br>
               Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:C++,Python,java. <br>
               Ο τόπος καταγωγής μου ειναι η Χρυσούπολη. <br>
               Στον ελεύθερο μου χρόνο ασχολούμαι με το ποδόσφαιρο και τον μηχανοκίνητο αθλητισμό.<br>
+              <br>
               <a href="https://www.chrysoupolinews.com" target="_blank"><img src="images/chrysoupoli.jpg" width="550" height="350"></a>
 
          </p>
