--- a/xristos.html
+++ b/xristos.html
@@ -12,6 +12,7 @@
              <li><a href="project.html">Project</a></li>
              <li><a href="bio.html">Βιογραφικό</a></li>
              <li><a href="contact.html">Επικοινωνία</a></li>
+             <li><a href="tutorialgit.html">Οδηγός</a></li>
            </ul>
 
          <h3 align="center">Μέλη ομάδας</h3>
@@ -24,13 +25,17 @@
          </p>
              <h2 align="center">Βιογραφικό</h2>
         <p align="center">
-            Χρήστος Βενετόπουλος<br>
+            Χρήστος Βενετόπουλος
             <br>
-            <img src="images/xristos.jpg" width="250"><br>
+            <br>
+            <img src="images/xristos.jpg" width="250">
+            <br>
+            <br>
              ΑΜ:4161 <br>
              Οι γλώσσες προγραμματισμού που γνωρίζω ειναι οι εξής:java,c++.<br>
              Στον ελεύθερο μου χρόνο ασχολούμαι με το ποδοσφαιρο και βίντεο γκειμς<br>
              Ο Τόπος καταγωγής μου είναι απο Αλεξανδρούπολη <br>
+             <br>
              <a href="https://www.alexpolis.gr" target="_blank"><img src="images/alexpoli(1).jpg" width="550"></a>
 
          </p>
