--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
              <li><a href="project.html">Project</a></li>
              <li><a href="bio.html">Βιογραφικό</a></li>
              <li><a href="contact.html">Επικοινωνία</a></li>
+             <li><a href="tutorialgit.html">Οδηγός</a></li>
            </ul>
 
           <h3 align="center">Μέλη ομάδας</h3>
